sfdx-source/main/default/objects/log_Log_Event__e/fields/Log_Name__c.field-meta.xml
<CustomField>
    <fullName>Log_Name__c</fullName>
    <label>Log Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>