sfdx-source/main/default/objects/log_Log_Event__e/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <defaultValue>&quot;Standard&quot;</defaultValue>
    <description>This is the name of the Record Type that should be used when creating the record for the Log Record object.</description>
    <label>Record Type Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>