sfdx-source/main/default/objects/log_Log_Event__e/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>